# mockbook

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Justfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  flake.nix  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.devcontainer.example/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish.yaml
.vscode.example/: extensions.json  settings.json
examples/docker-compose/: README.md  docker-compose.yaml
examples/docker-compose/nginx-conf/: default.conf
examples/pytest-testcontainers/: pyproject.toml
examples/pytest-testcontainers/test/: conftest.py
mockbook/nginx/: main.conf
mockbook/nginx/conf.d/: default.conf
scripts/: run-jupyterlab.sh  run-mockbook.sh  run-nginx-autoreloader.sh  run-nginx.sh
test/: docker-compose.yaml  full.bats  mockbook-alone.bats  mockbook_alone.bats  nginx-non-80-port.bats  nginx_non_80_port.bats
