[project]
name = "mockbook"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "nbformat~=5.10.4",
    "fastapi[standard]~=0.128.0",
    "jupyterlab~=4.5.0",
    "faker~=40.1.0",
    "factory-boy~=3.3.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "mypy~=1.19.0",
    "pre-commit>=4.5.1",
    "ruff~=0.14.4",
    "shellcheck-py~=0.11.0.1",
    "shfmt-py~=3.12.0.2",
    "types-requests>=2.32.0.20250328",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN401", "S311"]

[tool.ruff.lint.per-file-ignores]
"jupyterlab/config.py" = ["ALL"]
"test/{bats,test_helper}/*" = ["ALL"]
"examples/*/test/*" = ["S101"]

[tool.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*', '^test/.*', '^jupyterlab/.*', '^examples/.*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = false
explicit_package_bases = true

[tool.setuptools.packages.find]
include = ["mockbook"]
