[project]
name = "mockbook"
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "nbformat~=5.10.4",
    "fastapi[standard]~=0.136.1",
    "jupyterlab~=4.5.0",
    "faker~=40.18.0",
    "factory-boy~=3.3.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "mypy~=1.20.0",
    "ruff~=0.15.8",
    "shellcheck-py~=0.11.0.1",
    "shfmt-py~=4.0.0.0",
    "types-requests>=2.32.0.20250328",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN401", "S311"]

[tool.ruff.lint.per-file-ignores]
"jupyterlab/config.py" = ["ALL"]
"test/{bats,test_helper}/*" = ["ALL"]
"examples/*/test/*" = ["S101"]

[tool.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ['^\.venv/*', '^test/.*', '^jupyterlab/.*', '^examples/.*']
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = false
explicit_package_bases = true

[tool.setuptools.packages.find]
include = ["mockbook"]
