[project]
name = "mockbook-examples-pytest-testcontainers"
version = "0.1.0"
description = "Example using Mockbook as your mock server in pytest with Testcontainers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "filelock==3.29.4",
    "pytest==9.1.0",
    "pytest-xdist==3.8.0",
    "testcontainers==4.14.2",
]
